Fixed overflow-x problem inside image-slideshow

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -3,6 +3,10 @@ body {
     width:100vw;
 }
 
+.overflow-fix{
+    overflow-x:hidden;
+}
+
 .slideShowContainer {
     width: 100%;
     height: 75vmin;
@@ -88,7 +92,7 @@ body {
 
 .enroll {
     outline: none;
-    padding: 1em;
+    padding: .2em;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     background-color: #04cb84;
@@ -98,9 +102,10 @@ body {
     font-family: 'VCR OSD Mono', serif;
     font-weight: bolder;
     position: absolute;
-    left: 38%;
-    top: 50%;
-    width: 25%;
+    left: 37%;
+    top: 70%;
+    width: 40%;
+    transform:translate(-20px,-150px)
 }
 
 .informations {
@@ -218,11 +223,12 @@ body {
     }
 
     .enroll {
-        left: 40%;
+        left: 44%;
         top: 75%;
         padding: 1em;
-        width: 20%;
-        font-size: 1.5em;
+        width: 30%;
+        font-size: 1.2em;
+        transform:translate(-140px,10px)
     }
 
     .startCourse {
