--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,17 +4,17 @@ footer {
     /* margin-top: 4em; */
 }
 
-.newsletterInfo {
+/*.newsletterInfo {
     /* padding: 1.5em; */
     /* text-align: center; */
-    font-family: 'Roboto', sans-serif;
-    color: #2b4957;
-}
+    /* font-family: 'Roboto', sans-serif;
+    color: #2b4957; 
+}*/
 
 .newsletterForm #email {
     /* display: block;
     text-align: center; */
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
     background: #dbdbdb;
     /* margin: 0 auto; */
     /* font-size: .8em; */
@@ -43,9 +43,9 @@ footer {
     /* margin: .5em auto 0; */
     /* outline: none; */
     background: #465362;
-    font-family: 'Montserrat Alternates', serif;
+    /* font-family: 'Montserrat Alternates', serif; */
     /* border: none; */
-    color: white;
+    /* color: white; */
     /* font-weight: bolder; */
 }
 
@@ -56,9 +56,9 @@ footer {
 }
 
 .LogoOut {
-    font-family: "VCR OSD Mono", sans-serif;
+    /* font-family: "VCR OSD Mono", sans-serif; */
     /* margin-top: 1em; */
-    color: #2d3047;
+    /* color: #2d3047; */
     font-size: 4vmin;
     cursor: pointer;
     text-align: center;
@@ -76,19 +76,19 @@ footer {
     /* margin-bottom: 1em; */
 }
 
-.shortDescription li {
+/*.shortDescription li {
     /* text-align: center; */
-    font-family: 'Montserrat Alternates', sans-serif;
+    /* font-family: 'Montserrat Alternates', sans-serif; */
     /* font-weight: bolder;
-    display: inline; */
-}
+    display: inline; 
+}*/
 
-.motto {
+/*.motto {
     /* text-align: center; */
-    font-family: 'PT Sans', sans-serif;
-    color: #2d3047;
-    /* font-weight: 800; */
-}
+    /* font-family: 'PT Sans', sans-serif;
+    color: #2d3047; */
+    /* font-weight: 800; 
+}*/
 
 .gridLayout {
     margin-top: 3em;
@@ -102,21 +102,21 @@ footer {
 }
 
 .headingFour {
-    font-family: 'Roboto', serif;
+    /* font-family: 'Roboto', serif; */
     cursor: pointer;
-    color: #465362;
+    /* color: #465362; */
     /* font-size: 1em; */
     transition: .2s ease-in-out;
 }
 
-.line p {
-    text-align: center;
-    margin: 0 auto;
+/*.line p {
+    /* text-align: center;
+    margin: 0 auto; */
     /* padding-top: 2em;
     font-weight: bold; */
-    font-family: "PT Sans", sans-serif;
-    color: #2b4957;
-}
+    /* font-family: "PT Sans", sans-serif;
+    color: #2b4957; 
+}*/
 
 /* .break {
     display: none;
@@ -125,7 +125,6 @@ footer {
 
 @media screen and (min-width: 900px) {
     .LogoOut {
-        color: #2d3047;
         margin-left: 0.5em;
         text-align: left;
     }
@@ -164,7 +163,7 @@ footer {
         display: flex;
         justify-content: space-between;
         flex-direction: row-reverse;
-        align-items: flex-end;
+        align-items: flex-start;
 
     }
 
