--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -5,9 +5,13 @@
     box-sizing: border-box;
 }
 
+.fs-8vmin{
+    font-size:8vmin;
+}
+
 body {
     background-blend-mode: overlay;
-    background: url(../images/Background.jpeg) no-repeat!important;
+    background: url(../images/BackgroundImage.jpeg) no-repeat!important;
 }
 
 nav a,
@@ -25,8 +29,8 @@ header nav {
     transition: .3s ease-in-out;
 }
 
-header nav .navigationMenu {
-    display: -webkit-box;
+/* header nav .navigationMenu {
+    /* display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
@@ -39,12 +43,12 @@ header nav .navigationMenu {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-bottom: 1em;
-}
+    margin-bottom: 1em; 
+} */
 
 header nav .navigationMenu h1 {
-    font-family: "VCR OSD Mono", sans-serif;
-    color: #2d3047;
+    /* font-family: "VCR OSD Mono", sans-serif; */
+    /* color: #2d3047; */
     font-size: 8vmin;
     cursor: pointer;
     vertical-align: middle;
@@ -62,7 +66,7 @@ header nav .navigationMenu .hamburger {
     transition: .2s ease-in-out;
 }
 
-header nav .navigationMenu .closeHamburger {
+/* header nav .navigationMenu .closeHamburger {
     display: none;
 }
 
@@ -70,12 +74,12 @@ header nav .navigationMenu .closeHamburgerToggled {
     display: block;
     width: 9vmin;
     height: 8vmax;
-}
+} */
 
 header nav .untoggled {
     display: none;
-    font-family: "VCR OSD Mono", sans-serif;
-    font-size: 3vmin;
+    /* font-family: "VCR OSD Mono", sans-serif; */
+    font-size: 4vmin;
     /* list-style-type: none; */
 }
 
@@ -154,7 +158,7 @@ header nav li {
 
 @media screen and (min-width: 900px) {
     body {
-        background: url(../images/Background.jpeg) no-repeat;
+        background: url(../images/BackgroundImage.jpeg) no-repeat;
     }
 
     header nav {
